--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -213,6 +213,8 @@ header{
     }
 
     .right-off-canvas-menu{
+        z-index: 9999;
+
         @media #{$medium-up} {
             display: none;
         }
